# capscr

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  installer.iss  tauri.conf.json  tauri.linux.conf.json
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  security.yml
capabilities/: default.json
ci/compositors/: gnome-diag.sh  kde-diag.sh  sway-diag.sh
docs/: marketplace.md  platform-limits.md  plugin-runtime.md  registry.example.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  dirty.ts  hdrSupport.ts  keys.ts  main.tsx  num.ts  store.ts  styles.css
frontend/src/components/: HotkeyInput.tsx  Section.tsx  Titlebar.tsx  TrimModal.tsx
frontend/src/views/: Destinations.tsx  Editor.tsx  History.tsx  Marketplace.tsx  PinView.tsx  RecBar.tsx  Selector.tsx  Settings.tsx  Tasks.tsx
icons/: icon.icns
installer/: installer.nsi
linux/: capscr.desktop  install.sh
scripts/: build-hook.mjs
setup/: Cargo.toml  build.rs
setup/src/: engine.rs  main.rs  ui.rs
src/: commands.rs  jumplist.rs  main.rs  marketplace.rs  secret.rs  sound.rs  state.rs  tray.rs  win_darkmode.rs
src/capture/: color_probe.rs  cursor.rs  d2d_tonemap.rs  ext_copy.rs  gdi.rs  hdr.rs  hdr_png.rs  kwin.rs  mod.rs  pipewire_stream.rs  portal.rs  portal_screencast.rs  region.rs  screen.rs  tonemapping.rs  wayland_chain.rs  wgc.rs  window.rs  x11_grab.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/hotkeys/: evdev_linux.rs  ll_hook.rs  mod.rs  portal_linux.rs
src/overlay/: linux.rs  mod.rs  recording.rs  region.rs  unified.rs  wayland_frame.rs  wayland_native_selector.rs  window_detect.rs
src/plugin/: loader.rs  manifest.rs  mod.rs  wasm.rs  wasm_runtime.rs
src/recording/: gif_encoder.rs  mod.rs  mp4_stream.rs  spool.rs
src/shell/: mod.rs
src/tray/: mod.rs
src/ui/: mod.rs  style.rs
src/ui/components/: mod.rs  tile.rs
src/ui/views/: editor_view.rs  hidden_view.rs  main_view.rs  mod.rs  post_capture_view.rs  settings_view.rs  window_picker.rs
src/upload/: known_hosts.rs  mod.rs
