[package]
name = "capscr"
version = "0.2.2"
edition = "2021"
description = "A clean, modern screen capture tool"
authors = ["capscr"]
license = "MIT"
repository = "https://github.com/lintowe/capscr"

[features]
default = []
linux-tray = ["dep:linux-tray-icon"]
wasm-plugins = ["dep:wasmtime"]

[dependencies]
# GUI Framework
iced = { version = "0.13", features = ["image", "tokio", "advanced", "canvas"] }

# Screen capture
xcap = "0.0.14"

# Image processing and formats
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "bmp"] }

# GIF encoding
gif = "0.13"
imgref = "1.10"
rgb = "0.8"

# Global hotkeys
global-hotkey = "0.6"

# Clipboard
arboard = "3.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

# HTTP client for uploads
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }

# URL parsing for security validation
url = "2.5"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time for filenames
chrono = "0.4"

# File dialogs
rfd = "0.15"

# Notifications
notify-rust = "4.11"

# Audio playback
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4"] }

# Plugin system
libloading = "0.8"
zip = "2.2"
semver = "1.0"
wasmtime = { version = "41.0.4", optional = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Media_Audio",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Foundation",
    "Foundation_Collections",
] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-tray-icon = { package = "tray-icon", version = "0.19", optional = true }
x11rb = "0.13"


[build-dependencies]
embed-resource = "2.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false
