[package]
name = "capscr"
version = "0.3.16"
edition = "2021"
description = "A clean, modern screen capture tool with HDR support"
authors = ["capscr"]
license = "MIT"
repository = "https://github.com/lintowe/capscr"

[features]
default = []

[dependencies]
# GUI shell. tauri-runtime-wry 2.9.x has a Send+Sync mismatch with current wry
# release. Forcing the wry source to a known-good tag via [patch.crates-io] below.
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

# Global hotkeys (native, polled from a tokio task)
global-hotkey = "0.6"

# Screen capture
xcap = "0.0.14"

# Image processing and formats
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "bmp"] }

# GIF encoding
gif = "0.13"
imgref = "1.10"
rgb = "0.8"

# Clipboard (native fallback)
arboard = "3.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

# HTTP client for uploads
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }

# URL parsing for security validation
url = "2.5"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time for filenames
chrono = "0.4"

# Native notifications (the tauri plugin doesn't expose a Rust-side API yet)
notify-rust = "4.11"

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4"] }

# Plugin system (manifest + zip extraction). wasmtime returns when the WASM
# host re-lands; until then it's a security-advisory liability with no consumer.
zip = "2.2"
semver = "1.0"

# Upload destinations: FTP (SFTP planned, currently out of tree)
suppaftp = { version = "6.0", features = ["native-tls"] }

# HDR-preserved output (Phase 10 will add JXL/AVIF; pure-rust PNG cICP is fine here)
png = "0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Media_Audio",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Foundation",
    "Foundation_Collections",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[patch.crates-io]
# Force wry to the last release before the Send+Sync breaking change in
# new_window_req_handler. tauri-runtime-wry 2.9.x calls it with a Send-only
# closure and won't compile against wry 0.53+.
wry = { git = "https://github.com/tauri-apps/wry", tag = "wry-v0.52.1" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
